--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,3 +57,11 @@ services:
     - 8001:8080
     environment:
       ADMINER_DEFAULT_SERVER: ps_master 
+
+  load_balancer:
+    image: nginx:stable-alpine
+    container_name: load_balancer
+    ports: 
+      - "33060:33060"
+    volumes: 
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
